fix: dark mode

--- a/assets/scss/custom/structure/_topbar.scss
+++ b/assets/scss/custom/structure/_topbar.scss
@@ -429,14 +429,8 @@
   }
 }
 
-.nav-sticky {
+#topnav.nav-sticky {
   background-color: $white;
-}
-
-@media (prefers-color-scheme: dark) {
-  .nav-sticky {
-    background-color: $dark;
-  }
 }
 
 .navbar-white-bg {
